updated js with fixWidthHeaderElements to align for different resolutions..

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -101,7 +101,7 @@ header {
     font-weight: bold;
 
     ul#generic {
-      position: absolute;
+      position: fixed;
       right: 0;
       top: 4px;
       width: 300px;
@@ -205,18 +205,16 @@ header {
 
   #logo {
     background: url(whitegiraf_small.png);
-    //background: url('ac_logo.png');
     margin: 10px 0 0 900px;
-    position: absolute;
+    position: fixed;
     width: 100px;
     height: 100px;
-    float: right; 
   }
   #logo_text {
     background: url('advicecapital.png');
     width: 330px;
     height: 33px;
-    position: absolute;
+    position: fixed;
     margin: 30px 0 0 30px;
   }
 
